# tilemancer

./: .gitignore  CMakeLists.txt
include/tilemancer/: browser.h  gl.h  globals.h  graphics_globals.h  image.h  os.h  os_linux.h  os_windows.h  render.h  shaders.h  socket.h  stringutils.h  tilemancer.h
src/: CMakeLists.txt  bezier.cc  browser.cc  effect.cc  floatimage.cc  globals.cc  graphics_globals.cc  image.cc  load_texture.cc  main.cc  os_linux.cc  palette.cc  parameter.cc  render.cc  shaders.cc  socket.cc  stringutils.cc  tilemancer.cc
